--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
     - name: Hola Mundo
       run: echo "Hola Mundo"
+    
+    - name: touch file
+      run: touch file.txt
+
+    - name: Set text
+      run: echo "Hello World" >> file.txt
+
+    - name: Read file
+      run: cat file.txt 
   
   other:
     runs-on: ubuntu-latest
