Añadir restricciones de ramas en el flujo de trabajo de test_1.yml

--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -1,7 +1,16 @@
 name: Hola Mundo
 
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - master
+      
+  pull_request:
+    branches:
+      - main
+      - master
 
 jobs:
   hola:
