--- a/.github/workflows/test_1.yml
+++ b/.github/workflows/test_1.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
       - master
-      
+
   pull_request:
     branches:
       - main
@@ -33,5 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: hola
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
+            
     - name: LS
       run: ls -la
