--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # - name: LS
-    #   run: ls -la
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
 
-      - name: LS
-        run: |
-          ls -la
-          echo "Hello World" >> hola.txt
-          cat hola.txt
-  
+    - name: LS
+      run: |
+        chmod +x script.sh
+        ./script.sh
+
 
     # - name: Checkout
     #   uses: actions/checkout@v4.1.7
