Actualizar comandos de instalación y añadir paso adicional para probar flujo de trabajo en test_1.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,12 @@ jobs:
     
     - name: INstall Paquete
       run: npm install
+
+    - name: Setup PHP with PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+        extensions: imagick, swoole
     # - name: LS
     #   run: |
     #     chmod +x script.sh
