Actualizar comandos de instalación y añadir paso adicional para probar flujo de trabajo en test_1.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
 
     - name: MyAction
       uses: ./.github/actions/my-action
-      # with:
-      #   myInput: 'Hello World'
+      with:
+        myInput: 'Mira Como MOla'
 
     - name: LS
       run: ls -la  
