--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -1,12 +1,18 @@
 name: "My Action"
 description: "Test my Action"
 
+inputs:
+  myInput:
+    description: "My Input"
+    required: true
+    default: "Hello World"
+
 runs:
   using: "composite"
   steps:
     - name: Hola Mundo
       shell: bash
-      run: echo "Hola Mundo"
+      run: echo "${{ inputs.myInput }}"
     
     - name: touch file
       shell: bash
