--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       uses: ./.github/actions/my-action
       with:
         myInput: 'Mira Como MOla'
+        nombre: 'Andresito'
 
     - name: LS
       run: ls -la  
